--- a/atividadeErick-BootStrap/styles/index.css
+++ b/atividadeErick-BootStrap/styles/index.css
@@ -1,8 +1,13 @@
+
+
+/*header*/
+
+
 .apresentacao-header{
-    background-color: #6B240C;
+    background-color: #feb87c;
 }
 
-.area-header{
+.area-header, .mkt-dois-publicos{
     padding-top: 3rem;
     text-align:center;
 }
@@ -11,6 +16,15 @@
     color: #fff;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
+    margin-bottom: 4.5rem;
+}
+
+.btn-down{
+    background-color: #f2e2d5;
+    color: #fff;
+    padding: 0.3rem 0.7rem;
+    border-radius: 7px;
+    border: #6B240C;
 }
 
 .img-header{
@@ -22,4 +36,56 @@
     box-shadow: -36px -41px 8px -20px rgba(252, 252, 252, 0.95);
     -webkit-box-shadow: -36px -41px 8px -20px rgba(252, 252, 252, 0.95);
     -moz-box-shadow: -36px -41px 8px -20px rgba(252, 252, 252, 0.95);
+}
+
+
+/*cards*/
+
+
+.cards-bolsas{
+    padding: 3rem;
+    background-color: #f2e2d5;
+}
+
+.cards-bolsas h3{
+    color: #fff;
+    font-size: 3.5rem;
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
+
+.card{
+    margin-bottom: 1.5rem;
+}
+
+
+.btn-bolsas{
+    background-color: #6B240C;
+    color: #fff;
+    padding: 0.3rem 0.7rem;
+    border-radius: 7px;
+}
+
+/* dois publicos */
+
+.img-people{
+    width: 50%;
+    margin: 3rem;
+}
+
+.cardzinho{
+    width: 50%;
+}
+
+/* beneficos nitzy*/
+
+.Beneficio{
+    background-color: #f2e2d5;
+}
+
+.Beneficio h3{
+    color: #fff;
+    font-size: 3.5rem;
+    font-weight: bold;
+    margin-bottom: 2rem;
 }
